WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186247
[Wi-Fi Assertions] Resume assertions when NetworkProcess::cancelPrepareToSuspend is called
https://bugs.webkit.org/show_bug.cgi?id=186247
Summary
[Wi-Fi Assertions] Resume assertions when NetworkProcess::cancelPrepareToSusp...
Andy Estes
Reported
2018-06-03 14:48:48 PDT
[Wi-Fi Assertions] Resume assertions when NetworkProcess::cancelPrepareToSuspend is called
Attachments
Patch
(1.65 KB, patch)
2018-06-03 14:49 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews202 for win-future
(12.86 MB, application/zip)
2018-06-03 19:28 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-06-03 14:49:59 PDT
Created
attachment 341872
[details]
Patch
EWS Watchlist
Comment 2
2018-06-03 19:28:09 PDT
Comment on
attachment 341872
[details]
Patch
Attachment 341872
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7967978
New failing tests: http/tests/preload/onload_event.html
EWS Watchlist
Comment 3
2018-06-03 19:28:20 PDT
Created
attachment 341884
[details]
Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 4
2018-06-03 21:02:25 PDT
Comment on
attachment 341872
[details]
Patch Clearing flags on attachment: 341872 Committed
r232460
: <
https://trac.webkit.org/changeset/232460
>
WebKit Commit Bot
Comment 5
2018-06-03 21:02:27 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2018-06-03 21:04:54 PDT
<
rdar://problem/40761319
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug