[Wi-Fi Assertions] Resume assertions when NetworkProcess::cancelPrepareToSuspend is called https://bugs.webkit.org/show_bug.cgi?id=186247

Reviewed by Tim Horton.

Since we suspended assertions in prepareToSuspend, we need to resume them if
cancelPrepareToSuspend is called.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::cancelPrepareToSuspend):


Canonical link: https://commits.webkit.org/201649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232460 268f45cc-cd09-0410-ab3c-d52691b4dbfc